Source/WebCore/Modules/websockets/WebSocketChannel.cpp
@@ -220,12 +220,14 @@ void WebSocketChannel::fail(const String& reason)
         // Hybi-10 specification explicitly states we must not continue to handle incoming data
         // once the WebSocket connection is failed (section 7.1.7).
         // FIXME: Should we do this in hixie-76 too?
+        RefPtr<WebSocketChannel> protect(this); // The client can close the channel, potentially removing the last reference.
         m_shouldDiscardReceivedData = true;
         if (m_buffer)
             skipBuffer(m_bufferSize); // Save memory.
         m_deflateFramer.didFail();
         m_hasContinuousFrame = false;
         m_continuousFrameData.clear();
+        m_client->didReceiveMessageError();
     }
     if (m_handle && !m_closed)
         m_handle->disconnect(); // Will call didClose().
